--- a/index.html
+++ b/index.html
@@ -8,19 +8,26 @@
 </head>
 
 <body>
-<div id="container"> <!-- div container !-->
+	<div id="container"> <!-- div container !-->
 
-	<div id="fundoGame"> <!-- div fundoGame !-->
+		<div id="fundoGame"> <!-- div fundoGame !-->
 
-		<div id="inicio"> <!-- div inicio !-->
-			<h1> Resgate </h1>
+			<div id="inicio" onclick="start()"> <!-- div inicio !-->
+				<h1> Resgate </h1>
 
-			<p>Utilize a tecla W para movimentar o helicóptero para cima, a tecla S para movimentar o helicóptero para baixo e a tecla D para atirar.</p>
-			<p> Clique aqui para iniciar!! </p>
-		</div> <!-- Fim da div inicio !-->
+				<p>Utilize a tecla W para movimentar o helicóptero para cima, a tecla S para movimentar o helicóptero para baixo e a tecla D para atirar.</p>
+				<p> Clique aqui para iniciar!! </p>
+			</div> <!-- Fim da div inicio !-->
 
-    </div> <!-- Fim da div fundoGame !-->
+	    </div> <!-- Fim da div fundoGame !-->
 
-</div> <!-- Fim da div container !-->
+	</div> <!-- Fim da div container !-->
+
+	<script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous">
+	</script>
+	<script src="js/script.js"></script>
 </body>
 </html>
