--- a/index.html
+++ b/index.html
@@ -16,12 +16,20 @@
 				<h1> Resgate </h1>
 
 				<p>Utilize a tecla W para movimentar o helicóptero para cima, a tecla S para movimentar o helicóptero para baixo e a tecla D para atirar.</p>
-				<p> Clique aqui para iniciar!! </p>
+				<p class="pointer"> Clique aqui para iniciar!! </p>
 			</div> <!-- Fim da div inicio !-->
 
 	    </div> <!-- Fim da div fundoGame !-->
 
 	</div> <!-- Fim da div container !-->
+
+	<!-- Sons do Jogo -->
+	<audio src="sons/som.mp3" preload="auto" id="somDisparo"></audio>
+	<audio src="sons/explosao.mp3" preload="auto" id="somExplosao"></audio>
+	<audio src="sons/musica.mp3" preload="auto" id="musica"></audio>
+	<audio src="sons/gameover.mp3" preload="auto" id="somGameOver"></audio>
+	<audio src="sons/perdido.mp3" preload="auto" id="somPerdido"></audio>
+	<audio src="sons/resgate.mp3" preload="auto" id="somResgate"></audio>
 
 	<script
   src="https://code.jquery.com/jquery-3.6.0.min.js"
